更新tag、作弊者、性别等多项功能

--- a/vj4/ui/components/profile/profile.page.styl
+++ b/vj4/ui/components/profile/profile.page.styl
@@ -17,6 +17,13 @@ for n in (1..21)
   &:hover
     text-decoration: none
 
+.cheater_bg
+  background-color: $cheater
+  color: white
+
+.cheater
+  color: $cheater
+
 for key, _ in $badge-bg-color
   .badge--{key}
     background-color: $badge-bg-color[key] !important
