--- a/vj4/ui/templates/components/user.html
+++ b/vj4/ui/templates/components/user.html
@@ -7,19 +7,27 @@
 ) %}
 <span class="user-profile-link">
 {% if avatar %}
-  <img class="small user-profile-avatar v-center" src="{{ udoc['gravatar']|default('')|gravatar_url }}" width="20" height="20">
+  <img class="small user-profile-avatar v-center" src="{% if udoc['gravatar'] %} {{ udoc['gravatar'] }} {% else %} {{ _('https://old.xzynb.top/pic/1ico.png') }} {% endif %}" width="20" height="20">
 {% endif %}
-  <a class="user-profile-name" href="{{ reverse_url('user_detail', uid=udoc['_id']|default(0)) }}">
+  <a class="user-profile-name{% if udoc['cheater'] %} cheater {% endif %}" href="{{ reverse_url('user_detail', uid=udoc['_id']|default(0)) }}">
     {% if dudoc['display_name'] %}
       {{ dudoc['display_name'] }} ({{ udoc['uname'] }})
     {% else %}
       {{ udoc['uname'] }}
     {% endif %}
   </a>
+  {% if udoc['cheater'] %}
+    <a class="user-profile-badge v-center cheater_bg">{{ _('Cheater') }}</a>
+  {% endif %}
 {% if badge %}
   <a class="user-profile-badge v-center badge--lv{{ dudoc['level']|default(0) }}" href="{{ reverse_url('user_detail', uid=udoc['_id']|default(0)) }}" title="LV {{ dudoc['level']|default(0) }}: Top {{ vj4.model.builtin.LEVELS[dudoc['level']|default(0)]|default('N/A') }}%">LV {{ dudoc['level']|default(0) }}</a>
 {% if modbadge and handler.dudoc_has_perm(udoc, dudoc, vj4.model.builtin.PERM_MOD_BADGE) %}
   <span class="user-profile-badge v-center badge--mod" title="Moderator">MOD</span>
+{% endif %}
+{% if udoc['tags'] %}
+  {% for tag in udoc['tags'] %}
+    <span class="user-profile-badge v-center badge--mod" title="{{ tag }}">{{ tag }}</span>
+  {% endfor %}
 {% endif %}
 {% endif %}
 </span>
