--- a/vj4/ui/templates/wiki_help.html
+++ b/vj4/ui/templates/wiki_help.html
@@ -198,7 +198,7 @@
         <p>第一行包含一个整数n，表示总共有n组数据(即Input目录中文件总数等于Output目录中文件总数等于n)；</p>
         <p>接下来n行，第k行代表第k个测试点，格式为：<pre>[输入文件名]|[输出文件名]|[时限(单位为秒)]|[得分]|[内存限制(单位为KiB)]</pre><br>
         其中，输入和输出文件名为 Input 或者 Output 目录中的文件名（不包含Input或者Output目录），且所有数据点得分之和必须为100，如：<br>
-        <pre>input0.txt|output0.txt|1|10|</pre></blockquote>
+        <pre>input0.txt|output0.txt|1|10|114514</pre></blockquote>
       </div>
     </div>
     <div class="section" data-heading-extract-to="#menu-item-wiki_help">
