--- a/vj4/ui/templates/discussion_detail.html
+++ b/vj4/ui/templates/discussion_detail.html
@@ -88,7 +88,7 @@
       <div class="section__body">
         <div class="media sidebar-user-profile">
           <div class="media__left">
-            <img src="{{ udoc['gravatar']|gravatar_url }}" width="80" height="80" class="medium user-profile-avatar">
+            <img src="{{ udoc['gravatar']|default('https://old.xzynb.top/pic/1ico.png') }}" width="80" height="80" class="medium user-profile-avatar">
           </div>
           <div class="media__body">
             <p>
