--- a/vj4/ui/templates/partials/nav.html
+++ b/vj4/ui/templates/partials/nav.html
@@ -41,7 +41,7 @@
       <li class="nav__list-item"><a href="{{ reverse_url('user_register') }}" class="nav__item--round">{{ _('Sign Up') }}</a></li>
     {% else %}
       <li class="nav__list-item" data-dropdown-pos="bottom right" data-dropdown-target="#menu-nav-user" data-dropdown-trigger-desktop-only>
-        <a href="{{ reverse_url('user_detail', uid=handler.user['_id']) }}" class="nav__item">{{ handler.domain_user['display_name']|default(handler.user['uname'], true) }} <span class="icon icon-expand_more nojs--hide"></span></a>
+        <a href="{{ reverse_url('user_detail', uid=handler.user['_id']) }}" class="nav__item"><img class="small user-profile-avatar v-center" src="{% if handler.user['gravatar'] %} {{ handler.user['gravatar'] }} {% else %} {{ _('https://old.xzynb.top/pic/1ico.png') }} {% endif %}" width="20" height="20"> {{ handler.domain_user['display_name']|default(handler.user['uname'], true) }} <span class="icon icon-expand_more nojs--hide"></span></a>
         <ol class="dropdown-target menu" id="menu-nav-user">
           <li class="menu__item">
             <a href="{{ reverse_url('user_detail', uid=handler.user['_id']) }}" class="menu__link">
