--- a/vj4/ui/components/profile/profile.page.styl
+++ b/vj4/ui/components/profile/profile.page.styl
@@ -18,11 +18,11 @@ for n in (1..21)
     text-decoration: none
 
 .cheater_bg
-  background-color: $cheater
-  color: white
+  background-color: $cheater !important
+  color: white !important
 
 .cheater
-  color: $cheater
+  color: $cheater !important
 
 for key, _ in $badge-bg-color
   .badge--{key}
