--- a/vj4/ui/templates/domain_main.html
+++ b/vj4/ui/templates/domain_main.html
@@ -64,10 +64,10 @@
               {% for dudoc in dudocs %}
               <tr>
                 <td class="col--rank">{{ dudoc['rank'] }}</td>
-                <td class="col--user">{{ user.render_inline(udict[dudoc['uid']], dudoc=dudoc) }}</td>
+                <td class="col--user">{{ user.render_inline(rudict[dudoc['uid']], dudoc=dudoc) }}</td>
                 <td class="col--rp">{{ dudoc['rp']|default(0.0)|round(2) }}</td>
                 <td class="col--accept">{{ dudoc['num_accept']|default(0) }}</td>
-                <td class="col--bio">{{ udict[dudoc['uid']]['bio']|default('')|markdown }}</td>
+                <td class="col--bio">{{ rudict[dudoc['uid']]['bio']|default('')|markdown }}</td>
               </tr>
               {% endfor %}
             </tbody>
