--- a/vj4/ui/templates/bsod.html
+++ b/vj4/ui/templates/bsod.html
@@ -24,5 +24,7 @@
   <span style="color: #66d9ef">return</span> <span style="color: #ae81ff">0</span><span style="color: #f8f8f2">;</span>
 <span style="color: #f8f8f2">}</span>
 </pre></div>
+
+{{args}}
 </body>
 </html>
