--- a/vj4/ui/templates/domain_base.html
+++ b/vj4/ui/templates/domain_base.html
@@ -15,10 +15,15 @@
             {{ sidemenu.render_item(null, 'domain_manage_dashboard') }}
           {% if handler.has_perm(vj4.model.builtin.PERM_EDIT_DESCRIPTION) %}
             {{ sidemenu.render_item(null, 'domain_manage_edit') }}
+          {% endif %}
+          {% if handler.has_perm(vj4.model.builtin.PERM_EDIT_SUGGESTED_PROBLEM) %}
             {{ sidemenu.render_item(null, 'domain_manage_suggest_problem') }}
+          {% endif %}
+          {% if handler.has_perm(vj4.model.builtin.PERM_EDIT_SWIPER) %}
+            {{ sidemenu.render_item(null, 'domain_manage_swiper') }}
+          {% endif %}
             {{ sidemenu.render_item(null, 'domain_manage_join_applications') }}
             {{ sidemenu.render_item(null, 'domain_manage_discussion') }}
-          {% endif %}
             <!-- Ranking Settings -->
           </ol>
         </li>
