--- a/vj4/ui/templates/domain_manage_swiper.html
+++ b/vj4/ui/templates/domain_manage_swiper.html
@@ -1,22 +1,22 @@
 {% import "components/user.html" as user %}
 {% extends "domain_base.html" %}
 {% block domain_content %}
-<div style="display: none" class="dialog__body--addSuggestProblem">
+<div style="display: none" class="dialog__body--addSwiperImage">
   <div>
     <div class="row"><div class="columns">
-      <h1>{{ _('Add Problem') }}</h1>
+      <h1>{{ _('Add Swiper Image') }}</h1>
     </div></div>
     <div class="row">
       <div class="medium-6 columns">
         <label>
-          {{ _('Problem ID') }}
-          <input name="pid" type="text" class="textbox" autocomplete="off" data-autofocus>
+          {{ _('Image URL (Unique)') }}
+          <input name="src" type="text" class="textbox" autocomplete="off" data-autofocus>
         </label>
       </div>
       <div class="medium-6 columns">
         <label>
-          {{ _('Display Title') }}
-          <input name="title" type="text" class="textbox" autocomplete="off" data-autofocus>
+          {{ _('The URL to jump to when clicked') }}
+          <input name="href" type="text" class="textbox" autocomplete="off" data-autofocus>
         </label>
       </div>
     </div>
@@ -25,21 +25,21 @@
 
 <div class="section">
     <div class="section__header">
-      <h1 class="section__title">{{ _('Recommended Problems') }}</h1>
+      <h1 class="section__title">{{ _('Swiper Images') }}</h1>
       <div class="section__tools">
-        <button class="primary rounded button" name="add_problem">{{ _('Add Recommended Problems') }}</button>
+        <button class="primary rounded button" name="add_image">{{ _('Add Swiper Image') }}</button>
       </div>
     </div>
     {{ noscript_note.render() }}
     <div class="section__body no-padding domain-users">
-    {% if not spdocs %}
-    {{ nothing.render('Sorry, there is no recommended problems.') }}
+    {% if not sdocs %}
+    {{ nothing.render('Sorry, there is no swiper images.') }}
     {% else %}
       <table class="data-table">
         <colgroup>
           <col class="col--checkbox">
-          <col class="col--pid">
-          <col class="col--title">
+          <col class="col--href">
+          <col class="col--src">
           <col class="col--action">
         </colgroup>
         <thead>
@@ -49,24 +49,24 @@
                 <input type="checkbox" name="select_all" data-checkbox-toggle="user">
               </label>
             </th>
-            <th class="col--pid">{{ _('Problem ID') }}</th>
-            <th class="col--title">{{ _('Title') }}</th>
+            <th class="col--href">{{ _('The URL to jump to when clicked') }}</th>
+            <th class="col--src">{{ _('Image URL (Unique)') }}</th>
             <th class="col--action">{{ _('Action') }}</th>
           </tr>
         </thead>
         <tbody>
-          {% for spdoc in spdocs %}
-          <tr data-pid="{{ spdoc['pid'] }}">
+          {% for sdoc in sdocs %}
+          <tr data-src="{{ sdoc['src'] }}">
               <td class="col--checkbox">
                 <label class="compact checkbox">
                   <input type="checkbox">
                 </label>
               </td>
-              <td class="col--pid">
-                {{ spdoc['pid'] }}
+              <td class="col--href">
+                {{ sdoc['src'] }}
               </td>
-              <td class="col--title">
-                {{ spdoc['title'] }}
+              <td class="col--src">
+                {{ sdoc['href'] }}
               </td>
               <td class="col--action">
                 <a name="delete">{{ _("Delete") }}</a>
