feat: show domain gravatar in header todo: md_hint

--- a/vj4/ui/components/header/header.page.styl
+++ b/vj4/ui/components/header/header.page.styl
@@ -45,6 +45,10 @@ $header-gap-mini-domain = ($header-bg-height-mini - $nav-item-height - $header-l
   +mobile()
     display: inline-block
 
+.header__logo--gravatar
+  height: rem($header-logo-height)
+  margin-top: rem($nav-item-height)
+
 .header__logo--domain
   font-size: rem(40px)
   margin-top: rem($header-gap-mini-domain + $nav-item-height)
