feat: 更新footer, additional_css, markdown, mathjax等

--- a/vj4/ui/templates/components/md_hint.html
+++ b/vj4/ui/templates/components/md_hint.html
@@ -2,7 +2,7 @@
       <div class="section__body typo">
         <h2>{{ _('About Markdown') }}</h2>
         <p>关于Markdown，我想我不需要再介绍过多了。<br>
-          我承认本OJ的Markdown转义很烂，这里有一些你可能需要的提示。</p>
+          但是这里有一些你可能需要的提示。</p>
           <dl>
             <dt>显示多行代码</dt>
             <dd>
@@ -19,7 +19,7 @@ print("Hello World!")
               <p>这将不能正确显示，因为<b>特殊字体要与左右的字符之间至少有一个空格</b>。比如下面这样</p>
               <pre>This is a **bold** text.</pre>
             </dd>
-            <dt>未完待续</dt>
+            <dt>更多见<a href="/discuss/66fab4a8bdda6c00010b3137">Markdown Manual for AKIOI OJ</a></dt>
           </dl>
       </div>
     </div>
