--- a/vj4/ui/templates/partials/nav.html
+++ b/vj4/ui/templates/partials/nav.html
@@ -34,6 +34,9 @@
     {% if handler.has_perm(vj4.model.builtin.PERM_EDIT_DESCRIPTION) or handler.has_perm(vj4.model.builtin.PERM_EDIT_PERM) %}
       {{ nav_item('domain_manage', 'domain_manage') }}
     {% endif %}
+    {% if handler.has_perm(vj4.model.builtin.PRIV_ADMIN) %}
+      {{ nav_item('admin_dashboard', 'admin_dashboard') }}
+    {% endif %}
     </ol>
     <ol class="nav__list nav__list--secondary clearfix">
     {% if not handler.has_priv(vj4.model.builtin.PRIV_USER_PROFILE) %}
