--- a/vj4/ui/templates/partials/footer.html
+++ b/vj4/ui/templates/partials/footer.html
@@ -40,7 +40,7 @@
         </ul></div>
       </div>
       {% if domain_document['footer'] %}
-      <div class="medium-3 large-2 columns footer__category expandable">
+      <div class="medium-6 large-6 columns footer__category end">
         {{ domain_document['footer']|markdown }}
       </div>
       {% endif %}
