--- a/vj4/ui/templates/layout/html5.html
+++ b/vj4/ui/templates/layout/html5.html
@@ -33,14 +33,14 @@
   </script>
 
   <!-- MathJax2 -->
-  <!-- <script type="text/x-mathjax-config">
+  <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
       tex2jax: {
         inlineMath: [['$','$'], ['\\(','\\)']]
       }
     });
     </script>
-  <script src="//cdn.bootcss.com/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
+  <script src="//cdn.bootcss.com/mathjax/2.7.2/MathJax.js?config=TeX-AMS-MML_HTMLorMML" aysnc></script>
 
   <!-- MathJax3 -->
   <!-- <script>
@@ -53,9 +53,9 @@
       }
     };
   </script> -->
-  <script type="text/javascript" async 
+  <!-- <script type="text/javascript" async 
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.0/es5/tex-mml-chtml.js">
-  </script>
+  </script> -->
 
   {% if domain_document %}
   <style>
