feat: 支持在评论修改界面设置犇犇源 feat: 新增“动态管理者”独立特权

--- a/vj4/ui/templates/discussion_edit.html
+++ b/vj4/ui/templates/discussion_edit.html
@@ -16,6 +16,11 @@
               {{ _('Delete') }}
             </button>
           {% endif %}
+          {% if handler.has_priv(vj4.model.builtin.PRIV_BENBENOP) and (not benbenid) and main_domain %}
+            <button name="operation" value="set_benbenid" type="submit" class="rounded button">
+              {{ _('Apply this discussion as Updates') }}
+            </button>
+          {% endif %}
             <button type="button" class="rounded button" onclick="window.history.go(-1)">
               {{ _('Cancel') }}
             </button>
