feat: add broadcast mail

--- a/vj4/ui/templates/bsod.html
+++ b/vj4/ui/templates/bsod.html
@@ -25,6 +25,10 @@
 <span style="color: #f8f8f2">}</span>
 </pre></div>
 
+<pre style="color:white; font-size: 18px; line-height: 125%; display: inline-block; text-align: left; white-space: pre-wrap; word-wrap: break-word;">
+<span>Debug Information</span>
+
 {{args}}
+</pre>
 </body>
 </html>
