--- a/vj4/ui/templates/admin_base.html
+++ b/vj4/ui/templates/admin_base.html
@@ -14,6 +14,7 @@
           <ol class="menu collapsed">
             {{ sidemenu.render_item(null, 'admin_dashboard') }}
             {{ sidemenu.render_item(null, 'admin_user') }}
+            {{ sidemenu.render_item(null, 'admin_mail') }}
           </ol>
         </li>
       </ol>
