--- a/vj4/ui/templates/domain_main.html
+++ b/vj4/ui/templates/domain_main.html
@@ -241,6 +241,7 @@
           comment_ref = 'drid',
           reply_ref = 'drrid',
           comment_placeholder = 'Write Your Updates',
+          comment_post_text = 'Push!',
           comment_post_perm = vj4.model.builtin.PERM_REPLY_DISCUSSION,
           comment_edit_perm = vj4.model.builtin.PERM_NONE if handler.own(ddoc, vj4.model.builtin.PERM_EDIT_DISCUSSION_REPLY_SELF_DISCUSSION) else vj4.model.builtin.PERM_EDIT_DISCUSSION_REPLY,
           comment_edit_self_perm = vj4.model.builtin.PERM_EDIT_DISCUSSION_REPLY_SELF,
