feat: add disable_download style: remove no-heading class from solution detail page fix: use MathJax3

--- a/vj4/ui/templates/layout/html5.html
+++ b/vj4/ui/templates/layout/html5.html
@@ -33,17 +33,17 @@
   </script>
 
   <!-- MathJax2 -->
-  <script type="text/x-mathjax-config">
+  <!-- <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
       tex2jax: {
         inlineMath: [['$','$'], ['\\(','\\)']]
       }
     });
     </script>
-  <script src="//cdn.bootcss.com/mathjax/2.7.2/MathJax.js?config=TeX-AMS-MML_HTMLorMML" aysnc></script>
+  <script src="//cdn.bootcss.com/mathjax/2.7.2/MathJax.js?config=TeX-AMS-MML_HTMLorMML" aysnc></script> -->
 
   <!-- MathJax3 -->
-  <!-- <script>
+  <script>
     MathJax = {
       tex: {
         inlineMath: [['$', '$'], ['\\(', '\\)']]
@@ -52,10 +52,10 @@
         fontCache: 'global'
       }
     };
-  </script> -->
-  <!-- <script type="text/javascript" async 
+  </script>
+  <script type="text/javascript" async 
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.0/es5/tex-mml-chtml.js">
-  </script> -->
+  </script>
 
   {% if domain_document %}
   <style>
