--- a/vj4/ui/common/variables.inc.styl
+++ b/vj4/ui/common/variables.inc.styl
@@ -4,7 +4,7 @@ $grid-padding = 15px // half gutter
 // fonts
 $primary-font-family = "Open Sans", "Seravek", "Segoe UI", "Verdana", "PingFang SC", "Hiragino Sans GB", "Lantinghei SC", "Microsoft Yahei", "WenQuanYi Micro Hei", "sans"
 $header-font-family = "Open Sans", "Seravek", "Segoe UI", "Verdana", "PingFang SC", "Lantinghei SC", "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", "sans-serif"
-$code-font-family = "monaco", "Source Code Pro", "Consolas", "Lucida Console", "monospace"
+$code-font-family = "Fira Code", "monaco", "Source Code Pro", "Consolas", "Lucida Console", "monospace"
 
 // primary palette
 $default-color = #ddd
