--- a/vj4/ui/templates/components/comments_discussion.html
+++ b/vj4/ui/templates/components/comments_discussion.html
@@ -5,7 +5,7 @@
     <div class="media__left top">
       <img src="{{ udoc['gravatar']|default('https://old.xzynb.top/pic/1ico.png') }}" width="50" height="50" class="medium user-profile-avatar">
     </div>
-    <div class="media__body top no-heading">
+    <div class="media__body top">
     {% if not mode_create %}
       <div class="clearfix">
         <div class="supplementary dczcomments__supplementary">
@@ -32,7 +32,7 @@
     <div class="media__left top">
       <img src="{{ udoc['gravatar']|default('https://old.xzynb.top/pic/1ico.png') }}" width="60" height="60" class="medium user-profile-avatar">
     </div>
-    <div class="media__body top no-heading">
+    <div class="media__body top">
     {% if not mode_create %}
       <div class="clearfix">
         <div class="supplementary dczcomments__supplementary">
