--- a/vj4/ui/templates/components/comments_solution.html
+++ b/vj4/ui/templates/components/comments_solution.html
@@ -2,7 +2,7 @@
 {% macro reply(mode_create, udoc, doc = {}, rdoc = {}) %}
 <li class="dczcomments__reply{% if mode_create %} commentbox-container{% endif %}">
   <div class="media">
-    <div class="media__body top no-heading">
+    <div class="media__body top">
     {% if not mode_create %}
       <div class="clearfix">
         <div class="supplementary dczcomments__supplementary">
@@ -60,7 +60,7 @@
       </div>
     {% endif %}
     </div>
-    <div class="media__body top no-heading">
+    <div class="media__body top">
     {% if not mode_create %}
       <div class="clearfix">
         <div class="supplementary dczcomments__supplementary">
