--- a/vj4/ui/templates/partials/problem_sidebar_normal.html
+++ b/vj4/ui/templates/partials/problem_sidebar_normal.html
@@ -64,6 +64,7 @@
         <span class="icon icon-comment--text"></span> {{ _('Solutions') }}
       </a></li>
     {% endif %}
+    {% if (handler.own(pdoc, vj4.model.builtin.PERM_READ_PROBLEM_DATA_SELF) or handler.has_perm(vj4.model.builtin.PERM_READ_PROBLEM_DATA)) and (not pdoc['disable_download']) and (pdoc['data']) %}
     {% if not handler.has_priv(vj4.model.builtin.PRIV_USER_PROFILE) %}
     <li class="menu__item"><a class="menu__link" href="javascript:showSignInDialog();">
       <span class="icon icon-download"></span> {{ _('Login to Download Problem Data') }}
@@ -71,6 +72,7 @@
     {% else %}
       <li class="menu__item"><a class="menu__link" href="{{ reverse_url('problem_data', pid=pdoc['doc_id']) }}">
       <span class="icon icon-download"></span> {{ _('Download Problem Data') }}</a></li>
+    {% endif %}
     {% endif %}
     {% if page_name == 'problem_detail' and handler.has_priv(vj4.model.builtin.PRIV_USER_PROFILE) %}
       <li class="menu__seperator"></li>
