--- a/vj4/ui/templates/problem_settings.html
+++ b/vj4/ui/templates/problem_settings.html
@@ -21,6 +21,7 @@
       <div class="section__body">
         <form method="post">
           {{ form.form_checkbox(label='Hidden', help_text='Note: Problem title may not be hidden.', name='hidden', value=pdoc['hidden']) }}
+          {{ form.form_checkbox(label='Disable downloading of testdata', help_text='Disable downloading of data', name='disable_download', value=pdoc['disable_download']) }}
           {{ form.form_text(columns=12, label='Category', help_text='Format: category 1, sub category 1.1, sub category 1.2, ..., sub category 1.x, ..., category n, sub category n.1, sub category n.2, ..., sub category n.m, ...', name='category', value=pdoc['category']|join(', ')) }}
           {{ form.form_text(columns=12, label='Tags', help_text='Splitted by \', \'.', name='tag', value=pdoc['tag']|join(', ')) }}
           {{ form.form_text(columns=12, label='AC Message', help_text='This message will be presented to those whose submissions are accepted.', name='ac_msg', value=(pdoc['ac_msg'] or '' )) }}
