--- a/vj4/ui/components/truncate/truncate.page.styl
+++ b/vj4/ui/components/truncate/truncate.page.styl
@@ -1,7 +1,7 @@
 .truncate
   position: relative;
   overflow: hidden;
-  transition: max-height 0.5s ease-in-out;
+  transition: max-height .3s ease-in-out;
 
 .truncate-mask
   position: absolute;
@@ -11,7 +11,7 @@
   bottom: 0;
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
   opacity: 0;
-  transition: opacity 0.5s ease-in-out;
+  transition: opacity .3s ease-in-out;
   pointer-events: none;
 
 .truncate-mask.visible
@@ -30,7 +30,7 @@
   left: 50%;
   transform: translateX(-50%);
   z-index: 114514;
-  transition: background-color 0.3s;
+  transition: background-color .3s;
 
 .truncate-toggle-button:hover
   background-color: #0056b3;
