fix: compiler args

--- a/vj4/ui/templates/wiki_help.html
+++ b/vj4/ui/templates/wiki_help.html
@@ -37,8 +37,8 @@
         <p>AKIOI OJ使用<a href="https://github.com/vijos/jd4">jd4</a>进行评测，以docker镜像的形式安装至评测机。所使用的编译器均为创建镜像时<a href="https://wiki.debian.org/DebianTesting">debian testing</a>分支的最新版。编译参数如下：</p>
         <blockquote><ul>
           <li>Free Pascal <pre>fpc -O2 -o/out/foo /in/foo.pas</pre></li>
-          <li>C <pre>gcc -O2 -Wall -std=c99 -o /out/foo /in/foo.c -lm</pre></li>
-          <li>C++ <pre>g++ -O2 -Wall -std=c++11 -o /out/foo /in/foo.cc -lm</pre></li>
+          <li>C <pre>gcc -O2 -DONLINE_JUDGE -Wall -std=c99 -o /out/foo /in/foo.c -lm</pre></li>
+          <li>C++ <pre>g++ -O2 -DONLINE_JUDGE -Wl,-z,stack-size=1000000000 -Wall -std=c++14 -o /out/foo /in/foo.cc -lm</pre></li>
           <li>Java <pre>javac Main.java</pre></li>
           <li>Python <pre>python foo.py</pre></li>
           <li>Python 3 <pre>python3 foo.py</pre></li>
