--- a/vj4/ui/templates/partials/footer.html
+++ b/vj4/ui/templates/partials/footer.html
@@ -11,7 +11,7 @@
         </h1>
         <div class="footer__category__expander"><ul class="footer__category__list">
           <li class="footer__category__item"><a href="{{ reverse_url('record_main') }}">{{ _('Judging Queue') }}</a></li>
-          <li class="footer__category__item"><a href="https://status.xzynb.top/">{{ _('Service Status') }}</a></li>
+          <li class="footer__category__item"><a href="https://status.xzynb.top/" target="_blank">{{ _('Service Status') }}</a></li>
         </ul></div>
       </div>
       <div class="medium-3 large-2 columns footer__category expandable">
@@ -23,7 +23,7 @@
         </h1>
         <div class="footer__category__expander"><ul class="footer__category__list">
           <li class="footer__category__item"><a href="https://github.com/Gingmzmzx/AKIOIOJ" target="_blank">{{ _('Open Source') }}</a></li>
-          <li class="footer__category__item"><a href="https://github.com/Gingmzmzx/GenerateTestCase/">{{ _('GenerateTestCase') }}</a></li>
+          <li class="footer__category__item"><a href="https://github.com/Gingmzmzx/GenerateTestCase/" target="_blank">{{ _('GenerateTestCase') }}</a></li>
           <li class="footer__category__item"><a href="/p/1000">{{ _('Online IDE') }}</a></li>
         </ul></div>
       </div>
