--- a/vj4/ui/templates/user_detail.html
+++ b/vj4/ui/templates/user_detail.html
@@ -216,7 +216,7 @@
   {% if udoc['commemorate'] %}
   <div class="section side">
     <div class="section__header">
-      <h1 class="section__title">{{ _("Memorial Account") }}</h1>
+      <h1 class="section__title">{{ _("AFOed") }}</h1>
     </div>
     <div class="section__body typo">
       {{ _("Please allow us to bid a final farewell here to commemorate the memories and footprints left in AKIOI OJ") }}
